[project]
name = "2nd_battery_agent"
version = "0.1.0"
description = "도메인 에이전트 개발기"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Eta.J", email = "j808esc@gmail.com"}
]
dependencies = [
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.13.1,<3",
    "httpx>=0.28.1,<0.29",
    "openai>=2.29.0,<3",
    "tenacity>=9.1.4,<10",
    "click>=8.3.1,<9",
    "structlog>=25.5.0",
]

[project.scripts]
eval = "src.eval_pipeline.__main__:cli"
synth = "src.synth_data.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_server", "src/eval_pipeline", "src/shared", "src/synth_data"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["eval_pipeline", "synth_data", "api_server", "shared"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7,<0.16.0",
    "mypy>=1.19.1,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "httpie>=3.2.4,<4",
]
test = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
]
